# kafka-streaming-demo

./: .gitignore  .pre-commit-config.yaml  README.md  admin.py  constants.py  consumer.py  docker-compose.yml  mkdocs.yml  models.py  producer.py  pyproject.toml
docs/: consumer.md  index.md  local_development.md  producer.md
telegraf/: telegraf-compose.yml  weather-processed.conf  weather.conf
tests/: test_producer.py
